# wizalloc

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.html  index.css  vite-env.d.ts
frontend/src/components/canvas/: BufferPoolCanvas.tsx  DiskCanvas.tsx  PageInspectorCanvas.tsx
frontend/src/components/layout/: CollapsibleSection.tsx  PaneDivider.tsx  PaneHeader.tsx
frontend/src/components/panels/: ColumnEditor.tsx  CreateTablePanel.tsx  EngineConfigPanel.tsx  LoadDataPanel.tsx  QuickFillPanel.tsx  ScanResultsPanel.tsx  StorageControlPanel.tsx  TableOperationsPanel.tsx
frontend/src/hooks/: useCanvas.ts  useMediaQuery.ts
frontend/src/lib/components/: ArenaCanvas.svelte  CollapsibleSection.svelte  ControlPanel.svelte  LinkedListCanvas.svelte  PaneDivider.svelte  PaneHeader.svelte
frontend/src/lib/stores/: layout.svelte.ts  linkedlist.svelte.ts  storage.svelte.ts
frontend/src/lib/wasm/: engine.ts  storage-engine.ts  storage-types.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/storage/: +page.svelte
frontend/src/stores/: layout.ts  storage.ts
frontend/src/wasm/: storage-engine.ts  storage-types.ts
wasm-engine/: Cargo.toml
wasm-engine/pkg/: package.json  wizalloc_engine.d.ts  wizalloc_engine.js  wizalloc_engine_bg.wasm  wizalloc_engine_bg.wasm.d.ts
wasm-engine/src/: lib.rs
wasm-engine/src/storage/: buffer_pool.rs  config.rs  disk.rs  mod.rs  overflow.rs  page.rs  schema.rs  snapshot.rs  table.rs  types.rs
(+4 files in other folders)
